feat(script): JBang directive completeness; .kts scripts get real dependency resolution
ScriptHeaderParser now covers the JBang surface (plan §5): //REPOS
(named and bare), //MAIN, //FILES target=source, //COMPILE_OPTIONS /
//RUNTIME_OPTIONS aliases, //PREVIEW (folded into both option lists so
nothing downstream changes), //JAVA 17+ (minimum), //GAV +
//DESCRIPTION recorded. //SOURCES — parsed but silently ignored until
now — actually reaches the compiler for .java and .kt; //FILES
materializes onto the runtime classpath (cache hits included); //MAIN
overrides the filename convention. Unknown directives stay ignored for
forward-compat.

.kts scripts previously ran with no dependency resolution at all
(kotlinc -script, bare). The kts goal now parses @file:DependsOn /
@file:Repository (kotlin-main-kts idiom, honored in .kt too) plus the
// directives, resolves through jk's CAS-first resolver — not
main-kts's embedded Ivy — and hands kotlinc a -classpath. The
annotations themselves are main-kts constructs plain kotlinc can't
compile, so the exec uses a line-preserving copy with them commented
out (diagnostics keep real positions). Verified end-to-end: a .kts
with @file:DependsOn on gson resolves, compiles, and runs.